fix: swagger documentation can be imported to postman
